Fix display of fullscreen image sliders on mobile modals ios.

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -560,6 +560,8 @@ blockquote {
     }
 
     .book-section-comparison-slider-fullscreen-container[data-state="fullscreen"] {
+        display: flex !important;
+        align-items: center !important;
         border: none !important;
         position: fixed;
         top: 0;
@@ -573,8 +575,6 @@ blockquote {
         border: 7px #cccccc solid !important;
         border-radius: 10px !important;
         box-sizing: border-box;
-        top: 50%;
-        transform: translateY(-50%);
     }
 
     .book-section-comparison-slider-fullscreen-container[data-state="fullscreen"] .book-section-comparison-before {
@@ -1104,7 +1104,6 @@ blockquote {
         flex: 0;
         margin: auto;
         height: 100%;
-        width: auto;
     }
 
     .subsection-modal-container-comparison-img {
